# vas_library

./: .gitignore  .gitmodules  LICENSE  README.md
AES_HeadphoneConference2019_ListeningTests/: OO.pd  OscFromUnity.pd  VAS_LT_BA_POS0.pd  VAS_LT_BA_POS1.pd  VAS_LT_FR_POS0.pd  VAS_LT_FR_POS6.pd  VAS_LT_OD_S01_POS01.pd  VAS_LT_OD_S01_POS02.pd  VAS_LT_OD_S01_POS03.pd  VAS_LT_OD_S02_POS01.pd  VAS_LT_OD_S02_POS02.pd  VAS_LT_OD_S02_POS03.pd  VAS_ListeningTest_Template.pd  VSEb_S00_R00_tail.txt  VSEb_S00_R02_tail.txt  VSEb_S01_R00_tail.txt  VSEb_S01_R01_tail.txt  VSEb_S01_R02_tail.txt  ba_S00_R00_tail.txt  ba_S00_R01_tail.txt  fr_pos0_tail.txt  fr_pos6_tail.txt  stereoArrayTest.pd  vas_binaural_mainprocess.pd  vas_binaural_subprocess.pd
C-Thread-Pool_WIN/: thpool.c
VAS_HeadtrackerConnect/: Device.swift  VasHeadtrackerConnect.swift
VAS_HeadtrackerConnect/VAS_HeadtrackerConnect_Android/: VAS_HeadtrackerConnect_Android.pro  local.properties  mainwindow.cpp
VAS_HeadtrackerConnect/VAS_HeadtrackerConnect_Android/android/: AndroidManifest.xml
VAS_HeadtrackerConnect/VAS_HeadtrackerConnect_Android___/: settings.gradle
VAS_HeadtrackerConnect/VAS_HeadtrackerConnect_Android___/app/: build.gradle
VAS_HeadtrackerConnect/VAS_HeadtrackerConnect_OSX/VAS_HeadtrackerConnect_OSX/: AppDelegate.swift  Info.plist  ViewController.swift
VAS_HeadtrackerConnect/VAS_HeadtrackerConnect_OSX/VAS_HeadtrackerConnect_OSX.xcodeproj/: project.pbxproj
VAS_HeadtrackerConnect/VAS_HeadtrackerConnect_Plugin/: VAS_HeadtrackerConnect_Plugin-Bridging-Header.h
VAS_HeadtrackerConnect/VAS_HeadtrackerConnect_Plugin/VAS_HeadtrackerConnect_Plugin/: SwiftForUnity.swift  SwiftForUnityBridge.mm  VAS_HeadtrackerConnect_Plugin.h
VAS_HeadtrackerConnect/VAS_HeadtrackerConnect_Plugin/VAS_HeadtrackerConnect_Plugin.xcodeproj/: project.pbxproj
VAS_HeadtrackerConnect/VAS_HeadtrackerConnect_Plugin/VAS_HeadtrackerConnect_Plugin_osx/: Info.plist
VAS_HeadtrackerConnect/VAS_HeadtrackerConnect_iOS/RWAHeadtrackerConnect_iOS/: AppDelegate.swift  Info.plist  ViewController.swift
VAS_HeadtrackerConnect/VAS_HeadtrackerConnect_iOS/VAS_HeadtrackerConnect_iOS.xcodeproj/: project.pbxproj
VAS_HeadtrackerConnect/build-VAS_HeadtrackerConnect_Android-Android_for_armeabi_v7a_arm64_v8a_x86_x86_64_Clang_Qt_5_15_2_android-Debug/: .qmake.stash  Makefile  android-VAS_HeadtrackerConnect_Android-deployment-settings.json  app_process  linker
VAS_HeadtrackerConnect/build-VAS_HeadtrackerConnect_Android-Android_for_armeabi_v7a_arm64_v8a_x86_x86_64_Clang_Qt_5_15_2_android-Debug/android-build/: AndroidManifest.xml  gradle.properties  local.properties~
VAS_HeadtrackerConnect/build-VAS_HeadtrackerConnect_Android-Android_for_armeabi_v7a_arm64_v8a_x86_x86_64_Clang_Qt_5_15_2_android-Debug/armeabi-v7a/: moc_characteristicinfo.cpp  moc_device.cpp  moc_deviceinfo.cpp  moc_mainwindow.cpp  moc_rwaheadtrackerconnect.cpp  moc_serviceinfo.cpp
examples/JUCE/VAS_Binauralrir/: VAS_Binauralrir.jucer
examples/MaxMSP/ak.binaural~/: maxmspsdk.xcconfig  tr.binaural51~.c  tr.binaural~.c  tr.convolve~.c  tr.hpcomp~.c  tr.hproom1~.c  tr_binaural51.h
examples/MaxMSP/doc/: vas.binaural-help.maxpat
examples/MaxMSP/sofa2header/: convertsofa.c
examples/MaxMSP/vas.binaural~/: vas.binaural~.c
examples/PureData/: CmakeLists.txt  Makefile  rwa_binauralsimple~.c  rwa_binauralsimple~.h  vas_binauralspace~.c  vas_binauralspace~.h  vas_binaural~.c  vas_binaural~.h  vas_del~.c  vas_del~.h  vas_dynconv~.h  vas_fileformat.pd  vas_hpcomp~.c  vas_hpcomp~.h  vas_partconv~.c  vas_partconv~.h  vas_reverb~.c  vas_reverb~.h
examples/PureData/doc/: MUA_S00_R00.sofa  delay_st_9s.aif  delay_st_filter.aif  extract.txt  fr_pos0_tail.txt  guitar.aif  nicePictureBinauralpicture.pd  rwa_binauralsimple~-help.pd  unitpulse.txt  vas_attenuate~-help.pd  vas_binaural_mainprocess.pd  vas_binaural_subprocess.pd  vas_binaural_unitySourceControl.pd  vas_binauralspace~-help.pd  vas_binaural~-help copy.pd  vas_binaural~-help.pd  vas_del~-help.pd  vas_dynconv~-help.pd  vas_hpcomp~-help.pd  vas_paracon~-help.pd  vas_paracon~_mixer.pd  vas_partconv~-help.pd  vas_reverb~-help.pd
examples/PureData/raw_binauralsimple~/: rwa_binauralrir~.c  rwa_binauralrir~.h  rwa_binauralsimple~.c  rwa_binauralsimple~.h  rwa_firobject.c  rwa_firobject.h  rwa_hpcomp~.c  rwa_hpcomp~.h  rwa_reverb~.c  rwa_reverb~.h
examples/PureData/tr_biquad~/: stp_defines.h  stp_gain.c  stp_gain.h  tr_biquad~.c
examples/PureData/vas_pd_linux/: Makefile  (+4 more)
examples/Shared/: tr_binaural~.h  tr_convolve~.h  tr_hpcomp~.h  tr_hproom1~.h
examples/Unity/: PluginList.h  VasUnitySpatializer copy 2.cpp  VasUnitySpatializer copy.cpp  VasUnitySpatializer.cpp
examples/Unity/AndroidStudio/app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
matlab/: sofa2text.m
source/: hp600hd.h  unused.c  vas_airAbsoprtionFIR.c  vas_airAbsoprtionFIR.h  vas_airAbsorbtion_test.c  vas_airAbsorption.c  vas_airAbsorption.h  vas_airAbsorptionSimple.c  vas_airAbsorptionSimple.h  vas_attenuation.c  vas_attenuation.h  vas_cppstring.cpp  vas_cppstring.hpp  vas_defs.h  vas_delay.c  vas_delay.h  vas_delayTap.c  vas_delayTap.h  vas_delayTap_crossfade.c  vas_delayTap_crossfade.h  vas_delay_crossfade.c  vas_delay_crossfade.h  vas_dynamicFirChannel.c  vas_dynamicFirChannel.h  vas_fir.c  vas_fir.h  vas_fir_binaural.c  vas_fir_binaural.h  vas_fir_binauralReflection.c  vas_fir_binauralReflection.h  vas_fir_binauralReflection1.c  vas_fir_binauralReflection1.h  vas_fir_binaural_51.c  vas_fir_binaural_51.h  vas_fir_binaural_6reflections.c  vas_fir_binaural_6reflections.h  vas_fir_fabianFilter.h  vas_fir_fabianFilter_48kHz.h  vas_fir_fabianFilter_48kHz_short.c  vas_fir_headphoneCompensation.c  (+66 more)
source/HeadphoneCompensationFilters/: akg_q701_2048.txt  bose_qc25_2048.txt  bose_qc25_diff_2048.txt  cr_ir_l_2048.txt  cr_ir_r_2048.txt  dt770_ir_l_2048.txt  dt770_ir_r_2048.txt  dt990_ir_l_256.txt
source/oldNotInUseAnymore/: vas.binauralroom~.c  vas_3dSource.c  vas_3dSource.h  vas_fir_binauralReflection.h  vas_iir_cascadedBiquad 2.c  vas_interpolDelay.c
source/windowsspecific/: unistd.h
(+510 files in other folders)
